deploy-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyma-integration-service
  labels:
    service-label: kis
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: kyma-integration.v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyma-integration
  labels:
    app: kyma-integration.v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyma-integration.v1
  template:
    metadata:
      labels:
        app: kyma-integration.v1
    spec:
      containers:
      - name: kyma-integration
        image: kyma-integration:0.0.2
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: kyma-integration-app-config
            mountPath: /etc/config
      volumes:
      - name: kyma-integration-app-config
        configMap:
          name: kyma-integration-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kyma-integration-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kyma-integration-service
          servicePort: 8080
