deploy-kind-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    service-label: test
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: test.v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test.v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test.v1
  template:
    metadata:
      labels:
        app: test.v1
    spec:
      containers:
      - name: test
        image: test-app:label
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: test-config
            mountPath: /etc/config
      volumes:
      - name: test-config
        configMap:
          name: test-app-config
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: example-ingress
    annotations:
      ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: test-service
            servicePort: 8080
